[package]
name = "alphabet-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = {version = "0.3.58", features = ['CssStyleDeclaration','Document','Element','Event', 'EventTarget', 'HtmlElement','HtmlButtonElement','HtmlCollection','KeyboardEvent','Node','Window']}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
